# calc-tests

./: CMakeLists.txt  CalculatorTest.cpp  README.md  SimpleCalculator.cpp  SimpleCalculator.h  cov.sh
